# tmx

./: ._repath.rb  .ackrc.EXAMPLE  .gitignore  .gitmodules  .python-version  .repath.sh  .stack  .tool-versions  CHANGES.md  DOT_RSPEC  GREENLIST  Gemfile  Guardfile.example  LICENSE.md  LICENSE.txt  Pipfile  Procfile.history  README.md  README.txt  REDLIST  Rakefile  SEGFAULTING  TEMPORARY_NOT_THESE  TODO.dot  TODO.stack  VERSION.txt  _GL_2_  _GREENLIST_  adapter  class-graph.php  config.toml  current-tangent-stack.dot  filemetrics  mono-repo.test-these.list  package-lock.json  package.json  punchlist  push-all  pyproject.toml  requirements.txt  (+4 more)
STM/: README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
STM-doc/: 892.1.work-network-chart.dot  892.3.replication-notes.md  892.6-grid-view-case-study.md  892.8.how-to-test.md  README.md
anim-doc/: README.md
app-flow-doc/: 891.5.towards-a-recutils-dev-roadmap.dot  891.6.recfiles-capabilities-plan.md  891.7.install-flutter-dev-env.md  README.md
app_flow/: README.md  __init__.py  _app_design_via_recfile.py  _graph_viz_lines_via_big_index.py  cli.py  common_html.py  form_via_formal_entity.py  forming.py  routing.py  server_CLI.py
app_flow_test/: test_0525_tree_tools.py  test_1255_graph_viz.py  test_1325_routing.py  test_1385_form_via_formal_entity.py
arc/: .for-tmx-map.json  README.md  VERSION  skylab-arc.gemspec
autonomous_component_system/: HIT_LIST  README.md  skylab-autonomous_component_system.gemspec
basic/: .doc-test-manifest.list  .for-tmx-map.json  README.md  VERSION  skylab-basic.gemspec
(+11620 files in other folders)
