[tool.poetry]
name = "tmx-python"
version = "0.0.0"
description = "ohai"
authors = ["xyzzy"]

[tool.poetry.dependencies]
python = "^3.8"
tatsu = "^4.4.0"
toml = "^0.10.0"
click = "^7.0"
soupsieve = "^1.9.5"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# #born.
